// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View Should set the tag to be article 1`] = `
<div>
  <article
    class=""
    style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-height: 0; min-width: 0;"
  />
</div>
`;

exports[`View Should set the tag to be aside 1`] = `
<div>
  <aside
    class=""
    style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-height: 0; min-width: 0;"
  />
</div>
`;

exports[`View Should set the tag to be div 1`] = `
<div>
  <div
    class=""
    style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-height: 0; min-width: 0;"
  />
</div>
`;

exports[`View Should set the tag to be main 1`] = `
<div>
  <main
    class=""
    style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-height: 0; min-width: 0;"
  />
</div>
`;

exports[`View Should set the tag to be nav 1`] = `
<div>
  <nav
    class=""
    style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-height: 0; min-width: 0;"
  />
</div>
`;

exports[`View Should set the tag to be section 1`] = `
<div>
  <section
    class=""
    style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-height: 0; min-width: 0;"
  />
</div>
`;
